monitoring/configs/base/alloy/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alloy
  namespace: monitoring
spec:
  ingressClassName: traefik
  rules:
    - host: alloy.localho.st
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: alloy
                port:
                  name: http-metrics
